# quarkus-distroless

./: BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-quarkus-distroless  bazel-testlogs  dependencies.bzl  help.txt  packages.bzl
bazel-out/: volatile-status.txt
bazel-quarkus-distroless/bazel-out/: stable-status.txt
