package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:push.bzl", "container_push")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@package_bundle_amd64_debian10//file:packages.bzl", "packages")

container_image(
    name = "latest",
    repository = "shailsirohi/quarkus-distroless",
    base = "@distroless_base//image",
    debs = [
        packages["libgcc1"],
	packages["zlib1g"],
	packages["libstdc++6"],
    ],
)
